--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>WeightedVoronoi</title>
+    <title>Pondoronoi</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
@@ -28,6 +28,6 @@
     </style>
 </head>
 <body>
-    <canvas id="notan_canvas"></canvas>
+<canvas id="notan_app"></canvas>
 </body>
 </html>
